<resources>
    <string name="app_name">Склад 2025</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="action_login">Войти</string>
    <string name="empty_error">Логин и Пароль не должны быть пустыми</string>
    <string name="alertDialogErrorTitle">Ошибка</string>
    <string name="OK">ОК</string>
    <string name="dialog_fragment_barcode_select_title">Выберите корректный результат</string>
    <string name="action_scanner">сканирование</string>
    <string name="error_camera_permission">Необходимо предоставить доступ к камере</string>
    <string name="action_del">удалить</string>
    <string name="alertDialogMessageTitle">Сообщение</string>
    <string name="cancel">НЕТ</string>
    <string name="lbl_search">Сервер:</string>
    <string name="title_setting">Настройки</string>
    <string name="del_barcode_confirm_message">Вы уверены что хотите удалить ШК?</string>
    <string name="del_all_barcode_confirm_message">Вы уверены что хотите удалить строку ШК?</string>
    <string name="actionSave">Сохранить</string>
    <string name="confirm_message_save_settings">Вы уверены что хотите сохранить настройки?</string>
    <string name="action_del_all">удалить всю строку</string>
    <string name="setting_error_url">Не валидный url</string>
    <string name="confirm_close_doc">Вы уверены что хотите закрыть документ?</string>
    <string name="alertNextDialogMessageTitle">Продолжить</string>
    <string name="actionExpandable">actionExpandable</string>
    <string name="actionFlashlight">actionFlashlight</string>
    <string name="zoomPlus">zoomPlus</string>
    <string name="zoomMinus">zoomMinus</string>
    <string name="zoom">zoom</string>
    <string name="rememberMe">Запомнить меня</string>
    <string name="empty_data">Нет данных</string>
    <string name="title_doc_list">Документы</string>
    <string name="title_doc_content">Обработка документа</string>
    <string name="loading_camera">Загрузка камеры...</string>
    <string name="close_app">Вы уверены что хотите выйти из приложения?</string>
    <string name="version_app">Версия: %s</string>
</resources>